--- a/style.css
+++ b/style.css
@@ -451,3 +451,82 @@ header .menu.active {
 .banner .pause.active {
   display: block;
 }
+
+@media (max-width: 600px) {
+  header {
+    padding: 20px 50px;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 5px;
+  }
+
+  header::after {
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: var(--primary);
+  }
+
+  .logo {
+    margin-top: 10px;
+  }
+
+  .nav {
+    right: 0;
+    width: 100%;
+  }
+
+  .nav.active {
+    right: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .banner {
+    padding: 50px 30px 100px;
+  }
+
+  .banner .content {
+    position: relative;
+    padding: 50px 0 100px;
+  }
+
+  .banner .content h1 {
+    font-size: 5em;
+  }
+
+  .banner .content .model {
+    font-size: 2em;
+  }
+
+  .banner .content a {
+    padding: 5px 10px;
+  }
+
+  .banner .content p {
+    max-width: 90%;
+  }
+
+  .banner .screen {
+    display: none;
+  }
+
+  .banner .gallery {
+    width: 100%;
+    left: 0;
+  }
+
+  .sci {
+    right: 20px;
+  }
+
+  .banner .play,
+  .banner .pause{
+    bottom: 50%;
+    right: 30%;
+  }
+}
